--- a/dangerdeep/README
+++ b/dangerdeep/README
@@ -1,1 +1,69 @@
 Danger from the Deep - WW2 german submarine simulation
+------------------------------------------------------
+
+Authors:
+Thorsten Jordan (thorsten_jordan@gmx.de)
+
+Web:
+http://dangerdeep.sourceforge.net
+
+License:
+See "LICENSE"
+
+Install:
+./configure
+make
+run "subsim"
+(that's all for now)
+
+Gameplay
+------------------------------------------------------
+General rule: what does not work that is just not
+implemented yet ;-)
+
+Keys:
+
+displays:
+---------------------------------------
+F1 	Gauges
+F2	Periscope
+F3	UZO
+F4	Bridge
+F5	Map
+F6	Torpedo loading control
+F7	Damage control
+F8	Log book
+F9	Success records
+F10	Free view (for now)
+
+control:
+---------------------------------------
+Cursor keys	Rudder left/right/up/down
+Return		Center rudders
+1,2,3,4,5,6	Throttle slow,half,full,flank,stop,reverse
+Space		Select target
+t		Fire torpedo
+p		Periscope depth
+s		Surface
+c		Crash dive (to 150 meters)
++ -		Zoom/unzoom
+, .		turn view
+; :		turn view fast
+F11/F12		Time scale faster/slower
+Pause		(Un)pause game
+ESC		quit (for now)
+i		Take screenshot (uncompressed ppm, for now)
+
+special for now:
+----------------------------------------
+w a d x q e	step forward/left/right/backward/up/down in freeview mode
+
+Closing words
+--------------------------------------------------------
+This game is made as tactical simulation that tries to be
+as realistic (historical and physical) as possible.
+It is NOT meant to glorify war in any form.
+Many thousands of people died in the Atlantic during 1939-1945
+on both sides.
+
+EOF
