made escorts a bit smarter, added scope handling, added parser/tokenizer for mission files.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@16 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/README
+++ b/dangerdeep/README
@@ -47,6 +47,7 @@ Cursor keys	Rudder left/right/up/down
 Return		Center rudders
 1,2,3,4,5,6	Throttle slow,half,full,flank,stop,reverse
 Space		Select target
+0 (zero)	Scope up/down
 t		Fire torpedo
 p		Periscope depth
 s		Surface
