New key f to raise/lower snorkel.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@120 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/README
+++ b/dangerdeep/README
@@ -54,6 +54,7 @@ Space		Select target
 0 (zero)	Scope up/down
 c		Crash dive (to 150 meters)
 d		Snorkel depth
+f		Snorkel up/down
 h		Set heading to view
 i		identify target
 p		Periscope depth
