*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@126 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,7 +1,7 @@
 2003-04-18  Markus Petermann  <m.petermann@gmx.net>
 
 	* water_splash.h, water_splash.cpp:
-	  - New system for multiple texture display introduced. Does not work. FIXME
+	  - New system for multiple texture display introduced.
 	* user_interface.cpp:
 	  - Night mode color changed.
 	  - Console is no longer displayed in night mode.
