*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@129 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,19 @@
+2003-04-19  Markus Petermann  <m.petermann@gmx.net>
+
+	* sound.h, sound.cpp:
+	  - New module for sound effects.
+	* game.cpp:
+	  - Sound effects for torpedo detonation
+	* submarine.cpp:
+	  - Sound effect for torpedo launch
+	  - noise modification factor changed
+	* global_data.cpp, global_data.h:
+	  - Sound effects are loaded now
+	* water_splash.h, water_splash.cpp:
+	  - Created new classes for diverse water splash types.
+	* makedatapack:
+	  - data/sounds is now copied to archive now.
+
 2003-04-18  Markus Petermann  <m.petermann@gmx.net>
 
 	* water_splash.h, water_splash.cpp:
