--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,14 @@
+2003-04-29  Markus Petermann  <m.petermann@gmx.net>
+
+	* logbook.cpp:
+	  - Extend the area that can be used to change logbook page.
+	  - Change pages with '<' and '>' keys.
+	* game.cpp:
+	  - When two torpedos hit one target, it is sunk twice.
+	* torpedo.h, torpedo.cpp:
+	  - New method get_hit_points to create torpedos with different
+	    detonation power.
+
 2003-04-25  Markus Petermann  <m.petermann@gmx.net>
 
 	* logbook.h, logbook.cpp:
