*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@148 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -3,6 +3,7 @@
 	* logbook.cpp:
 	  - Extend the area that can be used to change logbook page.
 	  - Change pages with '<' and '>' keys.
+	  - Wooden desk as background.
 	* game.cpp:
 	  - When two torpedos hit one target, it is sunk twice.
 	* torpedo.h, torpedo.cpp:
