--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,15 @@
+2003-05-12  Markus Petermann  <m.petermann@gmx.net>
+
+	* submarine_interface.cpp:
+	  - When no target is selected but a torpedo is launched the simulation aborts.
+	    This error is corrected.
+
+2003-05-07  Markus Petermann  <m.petermann@gmx.net>
+
+	* sound.h, sound.cpp:
+	  - Minor changes. Return value of function SDL_OpenAudio was not evaluated
+	    properly.
+
 2003-04-30  Markus Petermann  <m.petermann@gmx.net>
 
 	* global_data.h, global_data.cpp, logbook.cpp:
