*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@173 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,6 +1,10 @@
 2003-06-07  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* shifted damage display to own class, some adds.
 
+2003-05-31  Markus Petermann  <m.petermann@gmx.net>
+	* date.h:
+	  - Month october added.
+	
 2003-05-30  Thorsten Jordan <thorsten_jordan@gmx.de>
 
 	* global_data.h, global_data.cpp
