--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,6 @@
+2003-06-11  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* released version 0.0.10 and updated version number to 0.0.11
+
 2003-06-07  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* shifted damage display to own class, some adds.
 
