moved display of damage status to correct class.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@177 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-16  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_interface, submarine_interface, ship_interface
+	  - moved damage related data directly to class submarine
+	  - made display_damage_status() in user_interface abstract, moved
+	    code to submarine_interface, where it belongs.
+
 2003-06-11  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* released version 0.0.10 and updated version number to 0.0.11
 
