--- a/dangerdeep/README
+++ b/dangerdeep/README
@@ -1,8 +1,11 @@
+This file is also way out of date (2003/07/03)
+
 Danger from the Deep - WW2 german submarine simulation
 ------------------------------------------------------
 
 Authors:
 Thorsten Jordan (thorsten_jordan@gmx.de)
+Markus Petermann (<m.petermann@gmx.net>)
 
 Web:
 http://dangerdeep.sourceforge.net
