new model: corvette.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@209 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,6 @@
 2003-07-05  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* ship_corvette.* and related files.
+	  - new model.
 	* ai.cpp
 	  - made destroyer course computation a bit smarter.
 	* game.h game.cpp user_interface.cpp
