head to course is shown.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@210 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -5,6 +5,10 @@
 	  - made destroyer course computation a bit smarter.
 	* game.h game.cpp user_interface.cpp
 	  - new clouds.
+	* submarine_interface.cpp user_interface.cpp
+	  - head to course is shown in gauge.
+	* angle.h
+	  - removed silly operator<,>,<=,>= functions.
 
 2003-07-04  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* smoke_stream.* ship.*
