First bits of custom mission generation.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@213 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* convoy.cpp game.cpp subsim.cpp
+	  - first bits of custom mission generation.
+
 2003-07-05  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* ship_corvette.* and related files.
 	  - new model.
