* smokestream.cpp   - segfault reason found & fixe
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@215 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,8 @@
 2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* smokestream.cpp
+	  - segfault reason found & fixed
+
+2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* begun Win32 Port.
 	  It compiles, links and runs, BUT:
 	  - there is no mouse pointer.
