* game.h game.cpp   - first bits of result recording and display, rather experimental.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@216 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,8 @@
 2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* game.h game.cpp
+	  - first bits of result recording and display, rather experimental.
+
+2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* smokestream.cpp
 	  - segfault reason found & fixed
 
