user_interface.cpp   - fixed code for new water, removed old water code.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@220 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-07  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_interface.cpp
+	  - fixed code for new water, removed old water code.
+
 2003-07-06  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* game.cpp
 	  - end game when contact to enemy is lost
