sea_object.cpp game.cpp convoy.cpp etc.   - new throttle model. more code for custom mission generation.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@225 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* sea_object.cpp game.cpp convoy.cpp etc.
+	  - new throttle model. more code for custom mission generation.
+
 2003-07-10  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* gun_shell.h gun_shell.cpp
 	  - new simulation of shot trajectory.
