introduced two new models.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@227 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,7 @@
 2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* introduced two new models.
+
+2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* sea_object.cpp game.cpp convoy.cpp etc.
 	  - new throttle model. more code for custom mission generation.
 
