--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,6 @@
+2003-07-12  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* further new model.
+
 2003-07-11  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* introduced two new models.
 
