show torpedo that is to be moved as ghost image
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@234 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,5 +1,9 @@
 2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* submarine_interface.cpp
+	  - show torpedo that is to be moved as ghost image.
+
+2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* submarine_interface.cpp
 	  - implemented manual torpedo (re)loading and transfer.
 	    automatic loading disabled.
 
