--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-17  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* sound.cpp
+	  - used SDL_InitSubSystem at pre-Init stage.
+
 2003-07-13  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* submarine_interface.cpp
 	  - show torpedo that is to be moved as ghost image.
