new display of conning tower.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@238 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-22  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_display.cpp
+	  - added display of conning tower model.
+
 2003-07-17  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* sound.cpp
 	  - used SDL_InitSubSystem at pre-Init stage.
