--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,6 @@
+2003-07-23  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* Improved conning tower model with textures.
+
 2003-07-22  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_display.cpp
 	  - added display of conning tower model.
