clouds and fog.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@241 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-25  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_interface.cpp
+	  - introduced fog.
+	* game.cpp
+	  - fixed cloud clip bug.
+
 2003-07-23  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* Improved conning tower model with textures.
 
