new panel and menu design.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@242 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-26  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_interface.cpp
+	  - new panel design, panel features resize, hiding planned.
+
 2003-07-25  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_interface.cpp
 	  - introduced fog.
