some preparations for damage simulation.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@243 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* game.cpp
+	  - some preparations for damage simulation
+
 2003-07-26  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_interface.cpp
 	  - new panel design, panel features resize, hiding planned.
