FAT programming input available.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@246 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -3,6 +3,7 @@
 	  - ships are selectable by clicking on the map.
 	* submarine_interface.cpp
 	  - first bits of torpedo programming interface for FATs.
+	  - turn switches are drawn and are turnable.
 
 2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* game.cpp
