completed FAT/LUT torpedo programming and simulation.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@247 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,9 @@
 2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* torpedo.cpp submarine_interface.cpp submarine.cpp
+	  - FAT/LUT programmable and simulated.
+	  - Now all torpedo types are simulated.
+
+2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_interface.cpp
 	  - ships are selectable by clicking on the map.
 	* submarine_interface.cpp
