first bits of damage simulation.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@253 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -11,6 +11,8 @@
 	    constructed
 	  - also a (more paranoid) check has been added to avoid array out
 	    of bounds bug
+	* submarine.cpp
+	  - first bits of damage simulation.
 
 2003-07-27  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* torpedo.cpp submarine_interface.cpp submarine.cpp
