--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,6 @@
+2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* fixed makedatapack. some files missing, we need a new release.
+
 2003-08-03  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* submarine.cpp
 	  - added sub model IXc/40 (most numerous type IX) with all
