fixed text number bug .
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@262 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,8 @@
 2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* subsim.cpp
+	  - fixed wrong text numbers in create custom mission.
+
+2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* made release 0.0.12 and increased version number to 0.0.13
 
 2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
