*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@263 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-05  Markus Petermann  <m.petermann@gmx.net>
+	* global_data.h, global_data.cpp
+	  - New texture object cloudsbackgr introduced.
+	* ships_sunk_display.cpp
+	  - cloudsbackgr is now used as screen background
+
 2003-08-04  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* subsim.cpp
 	  - fixed wrong text numbers in create custom mission.
