again fixed sun/moon simulation.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@297 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-30  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* user_interface.cpp
+	  - updated and corrected simulation as far as possible.
+	    sun and moon seem to be too small, but numerical results seem
+	    correct?!
+	    simulation is roughly accurate by rise/set times and degrees for
+	    both.
+
 2003-10-27  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_interface.cpp global_data.h global_data.cpp
 	  - added simulation and display of sun and moon.
