implemented horizon faces.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@300 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -7,9 +7,8 @@
 	    faster than the old water implementations because it uses
 	    display lists.
 	    The code can be adapted to PC's performance.
-	    Horizon faces are missing yet.
-	    Wave height and gradient/normal computation from position isn't
-	    yet implemented. This is needed for realistic rolling of ships.
+	    Wave height and normals are computed and used for ship's
+	    rotation giving a realistic behaviour.
 
 2003-10-30  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_interface.cpp
