new texture/image constructor options
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@301 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,10 @@
 2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* image.h image.cpp texture.h texture.cpp font.cpp global_data.cpp
+	  - removed silly "morealpha" option.
+	    made texture attributes more flexible (direct passing of OpenGL
+	    codes is posssible).
+
+2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* user_interface.cpp user_interface.h
 	  - again i implemented a new water code.
 	    this is much like the original code:
