--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -3,7 +3,7 @@
 	  - removed compile dependencies
 	* user_interface.cpp
 	  - first bits of terrain simulation
-	    (you'll have to unbzip2 the 1.map.bz2 for testing)
+	    map position is intentionally wrong for testing.
 
 2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* image.h image.cpp texture.h texture.cpp font.cpp global_data.cpp
