final model display speedup.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@309 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-15  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* model.cpp
+	  - combined display lists with vertex arrays.
+	    Now maximum performance for displaying meshes is obtained.
+
 2003-11-08  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* everywhere, beginning at game.cpp
 	  - removed compile dependencies
