code moved to sub directory.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@311 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,8 @@
 2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* all source and build files (makefiles, KDE, VC6)
+	  - moved to subdir "src"
+
+2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* global_data.h global_data.cpp model.cpp
 	  - replaced path DEFINEs by inline functions.
 
