major cleanup in class system.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@312 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,9 @@
 2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* system.h system.cpp (and client classes)
+	  - major cleanup. More keyboard info available.
+	  - removed silly ->draw_*image in system. Adapted all code.
+
+2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* all source and build files (makefiles, KDE, VC6)
 	  - moved to subdir "src"
 
