--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,7 @@
 2003-11-29  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* made 0.0.13 release. increased version number to 0.0.14
+
+2003-11-29  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* Makefile/configure
 	  - moved automake files one directory up.
 	    listed src/ as subdirectory for automake.
