named linux binary to dangerdeep.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@337 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/README
+++ b/dangerdeep/README
@@ -15,14 +15,14 @@ See "LICENSE".
 Install:
 ./configure
 make
-run "subsim"
+run "dangerdeep"
 (that's all for now)
 
 Gameplay
 ------------------------------------------------------
 The game recommends a resolution of 1024x768 strongly.
 It can be played with different resoultions, but will
-look ugly. Just type subsim --help and check for
+look ugly. Just type dangerdeep --help and check for
 resolution switching. Using a higher resolution is not as
 bad as using a smaller, though.
 General rule: what does not work that is just not
