--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-30  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* fixed package build scripts.
+	* renamed main linux binary from "subsim" to "dangerdeep"
+	* add SDL path as include path, thus a simple #include <SDL.h>
+	  works for both, win32 and linux platforms.
+
 2003-11-29  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* made 0.0.13 release. increased version number to 0.0.14
 	* improved build scripts and package format.
