*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@338 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-01  Markus Petermann  <markus.petermann@gmx.net>
+
+	* src/submarine_interface.cpp: Periscope view size changed to 20 degrees
+	  in unzoomed and 5 degrees in zoomed mode. 5 degrees is the view size
+	  when using normal glasses.
+	* src/dangerdeep.kdevprj: Updates project files for KDevelop.
+
 2003-11-30  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* fixed package build scripts.
 	* renamed main linux binary from "subsim" to "dangerdeep"
