map smoothing works, better compression, but nevertheless a much larger map file.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@340 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-01  Thorsten Jordan <thorsten_jordan@gmx.de>
+	* mapcompile.cpp coastline.cpp
+	  - coast lines are smoothed over segment boarders.
+	    coast has no more hard corners.
+	  - map is compressed with run length encoding.
+
 2003-12-01  Markus Petermann  <markus.petermann@gmx.net>
 
 	* src/submarine_interface.cpp: Periscope view size changed to 20 degrees
