*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@342 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-02  Markus Petermann  <markus.petermann@gmx.net>
+	* src/user_interface.cpp: Text of command is written with a fixed
+	  format.
+
 2003-12-01  Thorsten Jordan <thorsten_jordan@gmx.de>
 	* mapcompile.cpp coastline.cpp
 	  - coast lines are smoothed over segment boarders.
