*** empty log message ***
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@346 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,4 +1,7 @@
-2003-12-02  Markus Petermann  <markus.petermann@gmx.net>
+2003-12-03  Markus Petermann  <markus.petermann@gmx.net>
+	* src/damageview.cpp: New damageview program.
+
+2003-12-02  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap.cpp
 	  - map image is used as texture for map quads.
 	  - new Makefiles to fix missing files at install.
