New component tinyxml.
git-svn-id: http://svn.code.sf.net/p/dangerdeep/code/trunk@349 68f6b752-3551-0410-8fee-d3b2b286690f

--- a/dangerdeep/ChangeLog
+++ b/dangerdeep/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-03  Markus Petermann  <markus.petermann@gmx.net>
-	* src/damageview.cpp: New damageview program.
+	* src/tinyxml: Added TinyXML parser.
+
+2003-12-03  Markus Petermann  <markus.petermann@gmx.net>
+	* src/damageview.cpp: New damageview program. The top, side and front
+	  view as well as waterline is displayed.
 
 2003-12-02  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap.cpp
